--- a/Mobile/Mobile.csproj
+++ b/Mobile/Mobile.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Helper\ExtNavigationPage.cs" />
     <Compile Include="Helper\ExtNavigationService.cs" />
     <Compile Include="Helper\InfiniteListView.cs" />
+    <Compile Include="Helper\MyEntry.cs" />
     <Compile Include="Helper\PageService.cs" />
     <Compile Include="Helper\SegmentedControl.cs" />
     <Compile Include="Messenger\DefaultMessenger.cs" />
