* AuthenticationRepository.cs: Correção do Icones.
* Info.plist:
* AppDelegate.cs:
* MenuPage.xaml:
* Icon-60@2x.png:

--- a/Mobile.iOS/Info.plist
+++ b/Mobile.iOS/Info.plist
@@ -22,8 +22,6 @@
 	</array>
 	<key>MinimumOSVersion</key>
 	<string>6.0</string>
-	<key>CFBundleDisplayName</key>
-	<string>Gogopark</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.gogopark.Mobile</string>
 	<key>CFBundleVersion</key>
@@ -56,8 +54,10 @@
 		<string>MKDirectionsModePedestrian</string>
 	</array>
 	<key>NSLocationAlwaysUsageDescription</key>
-    <string>Can we use your location</string>
+	<string>Can we use your location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-    <string>We are using your location</string>
+	<string>We are using your location</string>
+	<key>CFBundleName</key>
+	<string>Afrig</string>
 </dict>
 </plist>
