* Mobile.sln: * Config.cs: * Info.plist: * Color.cs: * MainPage.xaml: * MainStack.cs: * MainModel.cs: * LoginPage.xaml: * Mobile.iOS.csproj: * logo.png: * logo@2x.png: * logo@3x.png: * Mobile.Droid.csproj: * MainViewModel.cs: * Add_Icon.png: * LoginViewModel.cs: * AuthenticationService.cs: * logo@2x - Copy.png: * logo.png: * Resource.Designer.cs: * AuthenticationRepository.cs: * IAuthenticationRepository.cs:
* Users.cs: App SG Capital Login

--- a/Mobile.Droid/Mobile.Droid.csproj
+++ b/Mobile.Droid/Mobile.Droid.csproj
@@ -22,7 +22,7 @@
     <MandroidI18n />
     <JavaMaximumHeapSize />
     <JavaOptions />
-    <TargetFrameworkVersion>v5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
@@ -124,6 +124,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Mobile\Mobile.csproj">
       <Name>Mobile</Name>
+      <Project>{5E5A4F21-29E9-4A65-8BC8-F0C681288C89}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
