--- a/ApiRepository/ApiRepository.csproj
+++ b/ApiRepository/ApiRepository.csproj
@@ -35,13 +35,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Entity\Users.cs" />
     <Compile Include="Repository\AddressRepository.cs" />
     <Compile Include="Repository\AuthenticationRepository.cs" />
     <Compile Include="Base\BaseRepository.cs" />
     <Compile Include="Repository\ExampleRepository.cs" />
     <Compile Include="Extensions\ToQueryString.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\SimulateRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Definition\Definition.csproj">
@@ -90,6 +90,9 @@
       <HintPath>..\packages\Xamarin.Forms.1.3.3.6323\lib\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
       <Private>True</Private>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Entity\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
