--- a/DataService/DataService.csproj
+++ b/DataService/DataService.csproj
@@ -39,6 +39,7 @@
     <Compile Include="AuthenticationService.cs" />
     <Compile Include="ExampleService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimulateService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
