--- a/Mobile.iOS/packages.config
+++ b/Mobile.iOS/packages.config
@@ -4,7 +4,10 @@
   <package id="ExifLib.PCL" version="1.0.1" targetFramework="xamarinios1" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="xamarinios1" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="xamarinios1" />
-  <package id="Xamarin.Forms" version="1.4.4.6443" targetFramework="xamarinios1" />
+  <package id="Rg.Plugins.Popup" version="0.0.17" targetFramework="xamarinios10" />
+  <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="xamarinios10" />
+  <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.2.0.31" targetFramework="xamarinios10" />
   <package id="XLabs.Core" version="2.0.5679" targetFramework="xamarinios1" />
   <package id="XLabs.Forms" version="2.0.5679" targetFramework="xamarinios1" />
   <package id="XLabs.IoC" version="2.0.5679" targetFramework="xamarinios1" />
