--- a/Mobile/packages.config
+++ b/Mobile/packages.config
@@ -6,7 +6,11 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8+wp8" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Xamarin.Forms" version="1.4.4.6443" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Rg.Plugins.Popup" version="0.0.17" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
+  <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
+  <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
+  <package id="sqlite-net" version="1.0.8" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
+  <package id="Xamarin.Forms" version="2.2.0.31" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
   <package id="XLabs.Core" version="2.0.5679" targetFramework="portable45-net45+win8+wp8" />
   <package id="XLabs.Forms" version="2.0.5679" targetFramework="portable45-net45+win8+wp8" />
   <package id="XLabs.IoC" version="2.0.5679" targetFramework="portable45-net45+win8+wp8" />
