* DateCell.cs: Form Projeção - 40% pronto.
* Mobile.csproj:
* SimulateAddPage.xaml:
* SimulateAddPage.xaml.cs:

--- a/Mobile/Mobile.csproj
+++ b/Mobile/Mobile.csproj
@@ -89,6 +89,7 @@
     <Compile Include="View\SimulateAddPage.xaml.cs">
       <DependentUpon>SimulateAddPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Helper\DateCell.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="App.xaml">
