--- a/Mobile.iOS/Mobile.iOS.csproj
+++ b/Mobile.iOS/Mobile.iOS.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="packages.config" />
     <Compile Include="Config.cs" />
+    <Compile Include="SegmentedControlRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
